mudanças no responsivo

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </div>
       <nav>
         <ul class="nav-menu">
-          <li><a href="#home">Início</a></li>
+          <li><a href="#">Início</a></li>
           <li><a href="#about">Sobre</a></li>
           <li><a href="#projects">Projetos</a></li>
           <li><a href="#contact">Contato</a></li>
@@ -39,7 +39,7 @@
       <div class="mobile_menu">
     </header>
 
-    <section id="profile" class="container">
+    <section id="profile" >
       <div class="intro_picture"><img src="./assets/logo.jpeg" alt="" /></div>
       <div class="intro_info">
         <p>Olá! meu nome é</p>
@@ -56,6 +56,7 @@
         </div>
       </div>
     </section>
+
     <script src="./main.js"></script>
   </body>
 </html>
