mudanças no mobile menu

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
     />
     <title>Victor Nepomuceno | Desenvolvedor Frontend</title>
   </head>
-  <body>
-    <header class="header-menu toggleNav">
+  <body class="toggleNav">
+    <header class="header-menu">
       <div class="mobile-menu">
         <div class="toggleMenu"></div>
         <div class="logo">
-          <a href="#"> VNcodes</a>
+          <a href="/"> VNcodes</a>
         </div>
             </div>
       </div>
@@ -34,6 +34,11 @@
           <li><a href="#about">Sobre</a></li>
           <li><a href="#projects">Projetos</a></li>
           <li><a href="#contact">Contato</a></li>
+            <div class="menu-icons">
+              <a target="_blank" href="mailto:victornepomucenodev@gmail.com"><i class="fa-solid fa-envelope"></i></a>
+              <a target="_blank" href="https://github.com/VictorNepomuceno"><i class="fa-brands fa-github"></i></a>
+              <a target="_blank" href="https://www.linkedin.com/in/victor-nepomuceno-97b0a62a1/"><i class="fa-brands fa-linkedin"></i></a>
+            </div>
         </ul>
       </nav>
       <div class="mobile_menu">
@@ -46,7 +51,7 @@
         <h1>Victor Nepomuceno</h1>
         <p class="last_p">Desenvolvedor Frontend</p>
         <div class="dev-links">
-          <a href="#">Currículo</a>
+          <a   href="#">Currículo</a>
           <a href="#contact">Contato</a>
         </div>
         <div class="dev-socials">
