--- a/index.html
+++ b/index.html
@@ -20,20 +20,24 @@
     <title>Victor Nepomuceno | Desenvolvedor Frontend</title>
   </head>
   <body class="toggleNav">
+    <div class="container">
+      <input type="checkbox" name="btn" id="btn">
+      <label for="btn"><div class="circle"></div></label>
+    </div>
     <header class="header-menu">
       <div class="mobile-menu">
         <div class="toggleMenu"></div>
         <div class="logo">
-          <a href="/"> VNcodes</a>
+          <a class="itens-menu" href="/"> VNcodes</a>
         </div>
             </div>
       </div>
       <nav>
         <ul class="nav-menu">
-          <li><a href="#">Início</a></li>
-          <li><a href="#about">Sobre</a></li>
-          <li><a href="#projects">Projetos</a></li>
-          <li><a href="#contact">Contato</a></li>
+          <li><a class="itens-menu" href="#">Início</a></li>
+          <li><a class="itens-menu" href="#about">Sobre</a></li>
+          <li><a class="itens-menu" href="#projects">Projetos</a></li>
+          <li><a class="itens-menu" href="#contact">Contato</a></li>
             <div class="menu-icons">
               <a target="_blank" href="mailto:victornepomucenodev@gmail.com"><i class="fa-solid fa-envelope"></i></a>
               <a target="_blank" href="https://github.com/VictorNepomuceno"><i class="fa-brands fa-github"></i></a>
@@ -51,7 +55,7 @@
         <h1>Victor Nepomuceno</h1>
         <p class="last_p">Desenvolvedor Frontend</p>
         <div class="dev-links">
-          <a   href="#">Currículo</a>
+          <a target="_blank"  href="./assets/resume-example.pdf">Currículo</a>
           <a href="#contact">Contato</a>
         </div>
         <div class="dev-socials">
