mudança no VH da pagina

--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
      </div>
     </section>
 
-    <section id="skills" class="hidden from-left">
+    <section id="skills">
       <div class="arrowSkills"><a class="arrow" href="#projects"><i class="fa-solid fa-angles-down"></i></a></div>
       <div class="skills-title"><h1 class="titleMain">Habilidades</h1></div>
-      <div class="skills-info-container">
+      <div class="skills-info-container hidden from-left">
         <div class="skills-box">
           <div class="skills-info html"><i class="fa-brands fa-html5 skillsIcon"></i><span>HTML5</span></div>
           <div class="skills-info css"><i class="fa-brands fa-css3-alt skillsIcon"></i><span>CSS3</span></div>
@@ -238,6 +238,6 @@
       <div class="copy"><span><i class="fa-solid fa-copyright"></i>Copyright, Victor Nepomuceno. Todos os direitos reservados.</span></div>
     </section>
   </main>
-    <script src="./main.js"></script>
+      <script src="./main.js"></script>
   </body>
 </html>
