--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </header>
   <main>
     <section id="profile" class="hidden" >
-      <div><a class="arrow" href="#about"><i class="fa-solid fa-angles-down"></i></a></div>
+      
       <div class="intro_picture hidden"><a target="_blank" href="https://www.linkedin.com/in/victor-nepomuceno-97b0a62a1/"><img src="./assets/logo.jpeg" alt="" /></a></div>
       <div class="intro_info hidden">
         <p>Olá, meu nome é</p>
@@ -65,6 +65,7 @@
           <a target="_blank" href="https://www.linkedin.com/in/victor-nepomuceno-97b0a62a1/"><i class="fa-brands fa-linkedin"></i></a>
         </div>
       </div>
+      <div><a class="arrow" href="#about"><i class="fa-solid fa-angles-down"></i></a></div>
     </section>
 
     <section id="about" class="">
@@ -135,7 +136,7 @@
             </div>
           </div>
         </div>
-        <div class="projects-img hidden from-right"><img src="./assets/liriosImage.jpeg" alt=""></div>
+        <div class="projects-img hidden from-right"><img src="./assets/liriosImage.jpeg" alt=""> <i class="fa-solid fa-eye"></i></div>
         <div class="projects hidden">
           <h2>Bikcraft</h2>
           <div class="projects-info">
@@ -158,7 +159,7 @@
             </div>
           </div>
         </div>
-        <div class="projects-img hidden from-right"><img src="./assets/liriosImage.jpeg" alt=""></div>
+        <div class="projects-img hidden from-right"><img src="./assets/imagemBikcraft.jpeg" alt=""><i class="fa-solid fa-eye"></i></div>
         <div class="projects hidden">
           <h2>Animais Fantásticos</h2>
           <div class="projects-info">
@@ -181,7 +182,7 @@
             </div>
           </div>
         </div>
-        <div class="projects-img hidden from-right"><img src="./assets/liriosImage.jpeg" alt=""></div>
+        <div class="projects-img hidden from-right"><img src="./assets/imagemAnimais.jpeg" alt=""><i class="fa-solid fa-eye"></i></div>
       </div>
     </section>
     <section id="contact" class="hidden from-left">
@@ -238,6 +239,35 @@
       <div class="copy"><span><i class="fa-solid fa-copyright"></i>Copyright, Victor Nepomuceno. Todos os direitos reservados.</span></div>
     </section>
   </main>
+  <div class="janelamodal" id="janelamodal">
+
+    <button class="fechar" id="fechar">X</button>
+    <div class="modal">
+      
+      <div class="slides">
+        <input type="radio" name="radio-btn" id="radio1">
+        <input type="radio" name="radio-btn" id="radio2">
+        <input type="radio" name="radio-btn" id="radio3">
+        <input type="radio" name="radio-btn" id="radio4">
+        <div class="slide first"><img src="./assets/liriosImage.jpeg" alt=""></div>
+        <div class="slide"><img src="./assets/imagem1.jpeg" alt=""></div>
+        <div class="slide"><img src="./assets/imagem2.jpeg" alt=""></div>
+        <div class="slide"><img src="./assets/imagem3.jpeg" alt=""></div>
+        <div class="navigation-auto">
+          <div class="auto-btn1"></div>
+          <div class="auto-btn2"></div>
+          <div class="auto-btn3"></div>
+          <div class="auto-btn4"></div>
+        </div>
+      </div>
+    </div>
+    <div class="manual-navigation">
+      <label class="manual-btn one" for="radio1"></label>
+      <label class="manual-btn second" for="radio2"></label>
+      <label class="manual-btn third" for="radio3"></label>
+      <label class="manual-btn four" for="radio4"></label>
+    </div>
+  </div>
       <script src="./main.js"></script>
   </body>
 </html>
