mudanças nos links de projects

--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
                   <li class="flex-list-inside"><i class="fa-brands fa-php"></i><span>PHP</span></li>
                 </ul>
                 <div class="dev-links">
-                  <a href="https://victornepomuceno.github.io/liriosrecepcoes/">Live Demo</a>
-                  <a href="https://github.com/VictorNepomuceno/liriosrecepcoes">Github</a>
+                  <a target="_blank" href="https://victornepomuceno.github.io/liriosrecepcoes/">Live Demo</a>
+                  <a target="_blank" href="https://github.com/VictorNepomuceno/liriosrecepcoes">Github</a>
                 </div>
               </div>
             </div>
