mudanças nas habilidades da section skills

--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
           <div class="skills-info bootstrap"><i class="fa-brands fa-bootstrap skillsIcon"></i><span>Bootstrap</span></div>
         </div>
         <div class="skills-box">
-          <div class="skills-info react"><i class="fa-brands fa-react skillsIcon"></i><span>React.js</span></div>
-          <div class="skills-info vue"><i class="fa-brands fa-vuejs skillsIcon"></i><span>Vue.js</span></div>
+          <div class="skills-info react"><i class="fa-brands fa-react skillsIcon"></i><span>React</span></div>
+          <div class="skills-info redux"><img src="./assets/icons8-redux.svg" alt=""><span>Redux</span></div>
         </div>
         <div class="skills-box">
           <div class="skills-info sass"><i class="fa-brands fa-sass skillsIcon"></i><span>Sass</span></div>
@@ -232,7 +232,7 @@
             </div>
 
             <div class="button">
-              <button type="submit">Enviar Mensagem</button>
+              <button class="btn" type="submit">Enviar Mensagem</button>
             </div>
             
            
