mudanças no responsivo

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <h1 class="titleMain">Victor Nepomuceno</h1>  
         <p class="last_p">Desenvolvedor Front-End</p>
         <div class="dev-links hidden">
-          <a target="_blank"  href="./assets/resume-example.pdf">Currículo</a>
+          <a href="#">Currículo</a>
           <a href="#contact">Contato</a>
         </div>
         <div class="dev-socials hidden from-right">
@@ -72,7 +72,7 @@
       <div><a class="arrow" href="#about"><i class="fa-solid fa-angles-down"></i></a></div>
     </section>
 
-    <section id="about" class="">
+    <section id="about">
       <div class="arrowAbout "><a class="arrow" href="#skills"><i class="fa-solid fa-angles-down hidden from-left"></i></a></div>
      <div class="about-title hidden from-left">
        <h1 class="titleMain">Sobre mim</h1>
@@ -104,7 +104,7 @@
         </div>
         <div class="skills-box">
           <div class="skills-info react"><i class="fa-brands fa-react skillsIcon"></i><span>React</span></div>
-          <div class="skills-info redux"><img src="./assets/icons8-redux.svg" alt=""><span>Redux</span></div>
+          <div class="skills-info redux"><img class="image1" src="./assets/icons8-redux.svg" alt=""> <img src="./assets/reduxDark.svg" alt="" class="image2"><img class="image3" src="./assets/reduxColor.svg" alt=""><span>Redux</span></div>
         </div>
         <div class="skills-box">
           <div class="skills-info sass"><i class="fa-brands fa-sass skillsIcon"></i><span>Sass</span></div>
@@ -189,6 +189,8 @@
         <div class="projects-img hidden from-right animais"><img src="./assets/imagemAnimais.jpeg" alt=""><i class="fa-solid fa-eye"></i></div>
       </div>
     </section>
+    
+    
     <section id="contact" class="hidden from-left">
       <div class="arrowProjects"><a class="arrow" href="#"><i class="fa-solid fa-angles-down"></i></a></div>
       <h1 class="titleMain">Entre em contato</h1>
