--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="mobile-menu">
         <div class="toggleMenu"></div>
         <div class="logo">
-          <a class="itens-menu" href="/"> VNcodes</a>
+          <a class="itens-menu" href="/">VNcodes</a>
         </div>
         <div class="container">
           <input type="checkbox" name="btn" id="btn">
@@ -55,15 +55,15 @@
     <section id="profile" class="hidden" >
       
       <div class="intro_picture hidden"><a target="_blank" href="https://www.linkedin.com/in/victor-nepomuceno-97b0a62a1/"><img src="./assets/logo.jpeg" alt="" /></a></div>
-      <div class="intro_info hidden">
+      <div class="intro_info">
         <p>Olá, meu nome é</p>
         <h1 class="titleMain">Victor Nepomuceno</h1>  
         <p class="last_p">Desenvolvedor Front-End</p>
-        <div class="dev-links hidden">
+        <div class="dev-links">
           <a href="#">Currículo</a>
           <a href="#contact">Contato</a>
         </div>
-        <div class="dev-socials hidden from-right">
+        <div class="dev-socials">
           <a target="_blank" href="mailto:victornepomucenodev@gmail.com"><i class="fa-solid fa-envelope"></i></a>
           <a target="_blank" href="https://github.com/VictorNepomuceno"><i class="fa-brands fa-github"></i></a>
           <a target="_blank" href="https://www.linkedin.com/in/victor-nepomuceno-97b0a62a1/"><i class="fa-brands fa-linkedin"></i></a>
@@ -72,12 +72,12 @@
       <div><a class="arrow" href="#about"><i class="fa-solid fa-angles-down"></i></a></div>
     </section>
 
-    <section id="about">
-      <div class="arrowAbout "><a class="arrow" href="#skills"><i class="fa-solid fa-angles-down hidden from-left"></i></a></div>
-     <div class="about-title hidden from-left">
+    <section id="about" class="hidden from-left">
+      <div class="arrowAbout "><a class="arrow" href="#skills"><i class="fa-solid fa-angles-down"></i></a></div>
+     <div class="about-title">
        <h1 class="titleMain">Sobre mim</h1>
      </div>
-     <div class="about-info hidden from-left">
+     <div class="about-info">
       <img src="./assets/about-victor.jpeg" alt="">
       <div class="about-text">
         <div class="about-softskills">
@@ -90,10 +90,10 @@
      </div>
     </section>
 
-    <section id="skills">
+    <section id="skills" class="hidden from-left">
       <div class="arrowSkills"><a class="arrow" href="#projects"><i class="fa-solid fa-angles-down"></i></a></div>
       <div class="skills-title"><h1 class="titleMain">Habilidades</h1></div>
-      <div class="skills-info-container hidden from-left">
+      <div class="skills-info-container">
         <div class="skills-box">
           <div class="skills-info html"><i class="fa-brands fa-html5 skillsIcon"></i><span>HTML5</span></div>
           <div class="skills-info css"><i class="fa-brands fa-css3-alt skillsIcon"></i><span>CSS3</span></div>
