mudanças no contact

--- a/index.html
+++ b/index.html
@@ -209,21 +209,29 @@
     
     <section id="contact" class="hidden from-left">
       <div class="arrowProjects"><a class="arrow" href="#"><i class="fa-solid fa-angles-down"></i></a></div>
-      <h1 class="titleMain">Entre em contato</h1>
+      <h1 class="titleMain">Contatos</h1>
       <div class="contact-container">
         <div class="contact-socials">
           <div class="dev-socials">
             <div class="dev-socials-text">
               <a target="_blank" href="mailto:victornepomucenodev@gmail.com"><i class="fa-solid fa-envelope"></i></a>
               <span>Email</span>
+              <span class="span2">victornepomucenodev@gmail.com</span>
             </div>
             <div class="dev-socials-text">
               <a target="_blank" href="https://github.com/VictorNepomuceno"><i class="fa-brands fa-github"></i></a>
               <span>Github</span>
+              <span class="span2">@victornepomuceno</span>
             </div>
             <div class="dev-socials-text">
               <a target="_blank" href="https://www.linkedin.com/in/victor-nepomuceno-97b0a62a1/"><i class="fa-brands fa-linkedin"></i></a>
               <span>Linkedin</span>
+              <span class="span2">@victornepomucenodev</span>
+            </div>
+            <div class="dev-socials-text">
+              <a target="_blank" href="https://www.linkedin.com/in/victor-nepomuceno-97b0a62a1/"><i class="fa-brands fa-whatsapp"></i></a>
+              <span>Whatsapp</span>
+              <span class="span2">(84) 99445-1103</span>
             </div>
           </div>
         </div>
