mudanças na fonstsize do #profile

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       
       <div class="intro_picture hidden"><a target="_blank" href="https://www.linkedin.com/in/victor-nepomuceno-97b0a62a1/"><img src="./assets/logo.jpeg" alt="" /></a></div>
       <div class="intro_info">
-        <p>Olá, meu nome é</p>
+        <p class="first_p">Olá, meu nome é</p>
         <h1 class="titleMain">Victor Nepomuceno</h1>  
         <p class="last_p">Desenvolvedor Front-End</p>
         <div class="dev-links">
@@ -191,8 +191,8 @@
                   <li class="flex-list-inside"><i class="fa-brands fa-js"></i><span>JavaScript</span></li>
                 </ul>
                 <div class="dev-links projectsLinks linksOne">
-                  <a href="#">Live Demo</a>
-                  <a href="#">Github</a>
+                  <a target="_blank" href="https://victornepomuceno.github.io/animais-fantasticos/">Live Demo</a>
+                  <a target="_blank" href="https://github.com/VictorNepomuceno/animais-fantasticos">Github</a>
                 </div>
               </div>
             </div>
@@ -229,7 +229,7 @@
               <span class="span2">@victornepomucenodev</span>
             </div>
             <div class="dev-socials-text">
-              <a target="_blank" href="https://www.linkedin.com/in/victor-nepomuceno-97b0a62a1/"><i class="fa-brands fa-whatsapp"></i></a>
+              <a target="_blank" href="https://wa.me/+5584994451103?text="><i class="fa-brands fa-whatsapp"></i></a>
               <span>Whatsapp</span>
               <span class="span2">(84) 99445-1103</span>
             </div>
