mudanças na section projects

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             </div>
           </div>
         </div>
-        <div class="projects-img hidden from-right"><img src="./assets/liriosImage.jpeg" alt=""> <i class="fa-solid fa-eye"></i></div>
+        <div class="projects-img hidden from-right" ><img data-tilt src="./assets/liriosImage.jpeg" alt=""> <i class="fa-solid fa-eye"></i></div>
         <div class="dev-links projectsLinks linksTwo">
           <a target="_blank" href="https://victornepomuceno.github.io/liriosrecepcoes/">Live Demo</a>
           <a target="_blank" href="https://github.com/VictorNepomuceno/liriosrecepcoes">Github</a>
@@ -169,7 +169,7 @@
             </div>
           </div>
         </div>
-        <div class="projects-img hidden from-right bikcraft"><img src="./assets/imagemBikcraft.jpeg" alt=""><i class="fa-solid fa-eye"></i></div>
+        <div class="projects-img hidden from-right bikcraft"><img data-tilt src="./assets/imagemBikcraft.jpeg" alt=""><i class="fa-solid fa-eye"></i></div>
         <div class="dev-links projectsLinks linksTwo">
           <a target="_blank"  href="https://victornepomuceno.github.io/bikcraft/">Live Demo</a>
           <a target="_blank" href="https://github.com/VictorNepomuceno/bikcraft">Github</a>
@@ -198,7 +198,7 @@
             </div>
           </div>
         </div>
-        <div class="projects-img hidden from-right animais"><img src="./assets/imagemAnimais.jpeg" alt=""><i class="fa-solid fa-eye"></i></div>
+        <div class="projects-img hidden from-right animais" ><img data-tilt src="./assets/imagemAnimais.jpeg" alt=""><i class="fa-solid fa-eye"></i></div>
         <div class="dev-links projectsLinks linksTwo">
           <a href="#">Live Demo</a>
           <a href="#">Github</a>
@@ -341,7 +341,8 @@
   
 </div>
   </div>
-     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+      <script src="./tilt-vanilla.js"></script>
+      <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
       <script src="./main.js"></script>
   </body>
 </html>
