mudanças no titulo

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       href="./assets/code-solid.svg"
       type="image/x-icon"
     />
-    <title>Victor Nepomuceno | Desenvolvedor Front-End</title>
+    <title>Victor Nepomuceno | Desenvolvedor FullStack</title>
   </head>
   <body class="toggleNav">
     <header class="header-menu">
@@ -89,7 +89,7 @@
         <div class="intro_info">
           <p class="first_p">Olá! Meu nome é</p>
           <h1 class="titleMain">Victor Nepomuceno</h1>
-          <p class="last_p">Desenvolvedor Front-End</p>
+          <p class="last_p">Desenvolvedor FullStack</p>
           <!-- <i class="fa-regular fa-face-laugh-wink fa-spin"></i> -->
           <div class="dev-links">
             <a href="#">Currículo</a>
