adição de curriculo

--- a/index.html
+++ b/index.html
@@ -92,7 +92,9 @@
           <p class="last_p">Desenvolvedor FullStack</p>
           <!-- <i class="fa-regular fa-face-laugh-wink fa-spin"></i> -->
           <div class="dev-links">
-            <a href="#">Currículo</a>
+            <a target="_blank" href="./assets/curriculo victor nepomuceno.pdf"
+              >Currículo</a
+            >
             <a href="#contact">Contato</a>
           </div>
           <div class="dev-socials">
